We are still facing this same issue! Alignment is not correct "Party Id, Address IP, Security mail" on "Print Document" page when we select "Landscape" mode in "Layout" section on "Print Document" page

--- a/assets/css/rtl-print.css
+++ b/assets/css/rtl-print.css
@@ -1,6 +1,6 @@
 @media (orientation: portrait) {
     #audit-trail-wrapper .main .info .bio {
-        left: 380px !important;
+        left: 180px !important;
     }
 }
 
